#97 Cookie Warning - Adds more vertical space on mobile, increases line height, corrects missing text.

--- a/assets/css/snowplow/_cookie.scss
+++ b/assets/css/snowplow/_cookie.scss
@@ -21,6 +21,11 @@
 
 body.cookie main {
     margin-top: 100px;
+
+    @media (max-width: $screen-sm-min)
+    {
+        margin-top: 350px;
+    }
 }
 
 #cookie {
@@ -28,8 +33,8 @@ body.cookie main {
     color: white;
     z-index: 999;
     font-size: 14px;
-    padding: 20px 0;
-    line-height: 1em;
+    padding: 30px 0;
+    line-height: 1.5em;
     letter-spacing: 0px;
     background: $brand-primary;
     border-bottom:1px solid white;
@@ -45,6 +50,7 @@ body.cookie main {
         display: block;
         padding:0 15px;
         text-align: right;
+        line-height: 1.5em;
 
         @media (min-width: 768px) {
             max-width: 750px;
